--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
     <title>Wallet</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
+    <!-- <script type="text/javascript"> -->
+      <!-- // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
@@ -37,8 +37,8 @@
       // which won't cause the browser to attempt to load the new url.
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
-      (function (l) {
+      // the single page app to route accordingly. -->
+      <!-- (function (l) {
         if (l.search[1] === '/') {
           var decoded = l.search
             .slice(1)
@@ -54,7 +54,7 @@
           );
         }
       })(window.location);
-    </script>
+    </script> -->
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
